--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 */
 @font-face {
     font-family: SDDystopian;
-    src: url(/assets/fonts/Sddystopiandemo-GO7xa.otf);
+    src: url(./assets/fonts/Sddystopiandemo-GO7xa.otf);
 }
 
 .menu {
