--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,76 @@
     src: url(./assets/fonts/Sddystopiandemo-GO7xa.otf);
 }
 
+/* Phone Potrait */
+@media (min-width: 430px) and (max-width: 931px){
+    /* header phone*/
+    h1{
+        display: none;
+    }
+    .menu > div {
+        position: relative;
+        left: 60%;
+        word-spacing: 5px;
+        top: -65px;
+        z-index: 3;
+    }
+
+    .sprites{
+        width: 200px;
+        display: inline;
+    }
+
+}
+
+/* Phone Landscape */
+@media (min-width: 932px) and (max-width: 1799px){
+    /* header phone landscape*/
+    .menu > h1 {
+        position: relative;
+        font-family: SDDystopian;
+        font-size: 40px;
+        top: -115px;
+        left: 160px;
+    }
+    .menu > div {
+        position: relative;
+        left: 80%;
+        word-spacing: 5px;
+        top: -65px;
+        z-index: 3;
+    }
+    .sprites{
+        width: 200px;
+        display: inline;
+    }
+}
+
+/* Desktop */
+@media (min-width: 1800px){
+    /* header */
+    .menu > div {
+        position: relative;
+        left: 90%;
+        word-spacing: 5px;
+        top: -65px;
+        z-index: 3;
+    }
+
+    .menu > h1 {
+        font-family: SDDystopian;
+        font-size: 100px;
+        position: relative;
+        top: -180px;
+        left: 160px;
+
+    }
+    .sprites{
+        width: 210px;
+        display: inline-block;
+    }
+
+}
+
 .menu {
     width: 100%;
     height: 80px;
@@ -27,27 +97,6 @@
     top: 0px;
     left: 30px;
 }
-
-
-/* Link menu */
-.menu > div {
-    position: relative;
-    left: 90%;
-    word-spacing: 5px;
-    top: -65px;
-    z-index: 3;
-}
-
-.menu > h1 {
-    font-family: SDDystopian;
-    font-size: 100px;
-    position: relative;
-    top: -180px;
-    left: 160px;
-
-}
-
-
 
 
 *{
